# optlib

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
examples/: parallel_seemc.py  test_parallel_seemc.py  test_seemc.py
optlib/: constants.py  dielectrics.py  elastic.py  fpa.py  inelastic.py  material.py  optical.py  optimfit.py  seemc.py  utils.py  xl
