[build-system]
# This tells pip to use setuptools to build your package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optlib"
version = "1.0.0"
description = "A high-performance Python library for modeling electron-solid interactions and Monte Carlo yields."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"} # Or whatever license you choose

authors = [
  { name="Olga Ridzel", email="your.email@example.com" },
]

# These are your core requirements (replaces requirements.txt)
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "tqdm>=4.60.0",
    "joblib>=1.0.0",
    "nlopt>=2.7.0"
]

[project.urls]
"Homepage" = "https://github.com/oridzel/optlib"
"Bug Tracker" = "https://github.com/oridzel/optlib/issues"

# Optional: Extra packages just for you when developing
[project.optional-dependencies]
dev = ["pytest", "build", "twine"]